--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node app",
-    "dev": "nodemon app"
+    "dev": "nodemon app",
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
     "axios": "^1.7.6",
