--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "echo 'No build step required'"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.717.0",
+    "@aws-sdk/node-http-handler": "^3.370.0",
     "axios": "^1.7.6",
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
@@ -22,6 +24,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
+    "sharp": "^0.33.5",
     "uuid": "^11.0.3"
   }
 }
