--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,12 +6,11 @@ on:
       - main
 
 env:
-  GOOGLE_APPLICATION_CREDENTIALS_PATH: /home/ec2-user/secrets/FirebaseService.json
   PORT: ${{ secrets.PORT }}
   NODE_ENV: ${{ secrets.NODE_ENV }}
   CLIENT_URL: ${{ secrets.CLIENT_URL }}
   MONGO_URI: ${{ secrets.MONGO_URI }}
-  GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_PATH }}
+  GOOGLE_APPLICATION_CREDENTIALS_PATH: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_PATH }}
   RECAPTCHA_SITE_SECRET: ${{ secrets.RECAPTCHA_SITE_SECRET }}
   AWS_REGION: ${{secrets.AWS_REGION}}
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
@@ -47,4 +46,4 @@ jobs:
             sudo docker pull ${{secrets.DOCKER_USERNAME}}/devhutch-server:latest
             sudo docker stop devhutch-server-container || true
             sudo docker rm devhutch-server-container || true
-            sudo docker run -v $GOOGLE_APPLICATION_CREDENTIALS_PATH:$GOOGLE_APPLICATION_CREDENTIALS -d --name devhutch-server-container -e PORT=$PORT -e NODE_ENV=$NODE_ENV -e CLIENT_URL=$CLIENT_URL -e MONGO_URI=$MONGO_URI -e GOOGLE_APPLICATION_CREDENTIALS=$GOOGLE_APPLICATION_CREDENTIALS -e RECAPTCHA_SITE_SECRET=$RECAPTCHA_SITE_SECRET -e AWS_REGION=$AWS_REGION -e AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY -e AWS_S3_BUCKET_NAME=$AWS_S3_BUCKET_NAME -p 5000:5000 ${{secrets.DOCKER_USERNAME}}/devhutch-server:latest
+            sudo docker run -v /home/ec2-user/secrets/FirebaseService.json:$GOOGLE_APPLICATION_CREDENTIALS_PATH -d --name devhutch-server-container -e PORT=$PORT -e NODE_ENV=$NODE_ENV -e CLIENT_URL=$CLIENT_URL -e MONGO_URI=$MONGO_URI -e GOOGLE_APPLICATION_CREDENTIALS=$GOOGLE_APPLICATION_CREDENTIALS -e RECAPTCHA_SITE_SECRET=$RECAPTCHA_SITE_SECRET -e AWS_REGION=$AWS_REGION -e AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY -e AWS_S3_BUCKET_NAME=$AWS_S3_BUCKET_NAME -p 5000:5000 ${{secrets.DOCKER_USERNAME}}/devhutch-server:latest
