--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
+            ssh -o StrictHostKeyChecking=no -i ${{ secrets.EC2_PRIVATE_KEY }} ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} echo "Connection Successful"
             sudo docker pull ${{secrets.DOCKER_USERNAME}}/devhutch-server:latest
             sudo docker stop devhutch-server-container || true
             sudo docker rm devhutch-server-container || true
