--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,18 +5,6 @@ on:
     branches:
       - main
 
-env:
-  PORT: ${{ secrets.PORT }}
-  NODE_ENV: ${{ secrets.NODE_ENV }}
-  CLIENT_URL: ${{ secrets.CLIENT_URL }}
-  MONGO_URI: ${{ secrets.MONGO_URI }}
-  GOOGLE_APPLICATION_CREDENTIALS_PATH: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_PATH }}
-  RECAPTCHA_SITE_SECRET: ${{ secrets.RECAPTCHA_SITE_SECRET }}
-  AWS_REGION: ${{secrets.AWS_REGION}}
-  AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-  AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-  AWS_S3_BUCKET_NAME: ${{secrets.AWS_S3_BUCKET_NAME}}
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -43,22 +31,21 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            ssh -o StrictHostKeyChecking=no -i ${{ secrets.EC2_PRIVATE_KEY }} ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} echo "Connection Successful"
-            sudo docker pull ${{secrets.DOCKER_USERNAME}}/devhutch-server:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/devhutch-server:latest
             sudo docker stop devhutch-server-container || true
             sudo docker rm devhutch-server-container || true
             sudo docker run \
             -d --name devhutch-server-container \
-            -v /home/ec2-user/secrets/FirebaseService.json:$GOOGLE_APPLICATION_CREDENTIALS_PATH \
-            -e PORT=$PORT \
-            -e NODE_ENV=$NODE_ENV \
-            -e CLIENT_URL=$CLIENT_URL \
-            -e MONGO_URI=$MONGO_URI \
-            -e GOOGLE_APPLICATION_CREDENTIALS_PATH=$GOOGLE_APPLICATION_CREDENTIALS_PATH \
-            -e RECAPTCHA_SITE_SECRET=$RECAPTCHA_SITE_SECRET \
-            -e AWS_REGION=$AWS_REGION \
-            -e AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
-            -e AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
-            -e AWS_S3_BUCKET_NAME=$AWS_S3_BUCKET_NAME \
+            -v /home/ec2-user/secrets/FirebaseService.json:${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_PATH }} \
+            -e PORT=${{ secrets.PORT }} \
+            -e NODE_ENV=${{ secrets.NODE_ENV }} \
+            -e CLIENT_URL=${{ secrets.CLIENT_URL }} \
+            -e MONGO_URI=${{ secrets.MONGO_URI }} \
+            -e GOOGLE_APPLICATION_CREDENTIALS_PATH=${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_PATH }} \
+            -e RECAPTCHA_SITE_SECRET=${{ secrets.RECAPTCHA_SITE_SECRET }} \
+            -e AWS_REGION=${{ secrets.AWS_REGION }} \
+            -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+            -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+            -e AWS_S3_BUCKET_NAME=${{ secrets.AWS_S3_BUCKET_NAME }} \
             -p 5000:5000 \
             ${{secrets.DOCKER_USERNAME}}/devhutch-server:latest
