--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/devhutch-server:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/devhutch-server:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/devtation-server:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/devtation-server:latest
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.9
@@ -31,11 +31,11 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/devhutch-server:latest
-            sudo docker stop devhutch-server-container || true
-            sudo docker rm devhutch-server-container || true
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/devtation-server:latest
+            sudo docker stop devtation-server-container || true
+            sudo docker rm devtation-server-container || true
             sudo docker run \
-            -d --name devhutch-server-container \
+            -d --name devtation-server-container \
             -v /home/ec2-user/secrets/FirebaseService.json:${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_PATH }} \
             -e PORT=${{ secrets.PORT }} \
             -e NODE_ENV=${{ secrets.NODE_ENV }} \
@@ -48,4 +48,4 @@ jobs:
             -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
             -e AWS_S3_BUCKET_NAME=${{ secrets.AWS_S3_BUCKET_NAME }} \
             -p 5000:5000 \
-            ${{secrets.DOCKER_USERNAME}}/devhutch-server:latest
+            ${{secrets.DOCKER_USERNAME}}/devtation-server:latest
